Ajustes de largura e da versão mobile

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -571,9 +571,9 @@
 
 		<div id="footer" role="contentinfo">
         	<div>
-        		<a href="#"> <img src="img/brasil.gif" alt="Brasil - Governo Federal" /> </a>
-        		<a href="#"> <img src="img/acesso-a-infornacao.gif" alt="Acesso a Informa&ccedil;&atilde;o" /> </a>
-	        	Desenvolvido com o CMS de código aberto <a href="http://plone.org">Plone</a>.
+        		<a href="#" class="logo-brasil"> <img src="img/brasil.gif" alt="Brasil - Governo Federal" /> </a>
+        		<a href="#" class="logo-acesso"> <img src="img/acesso-a-infornacao.gif" alt="Acesso a Informa&ccedil;&atilde;o" /> </a>
+	        	<p>Desenvolvido com o CMS de c&oacute;digo aberto <a href="http://plone.org">Plone</a>.</p>
 	        </div>
 		</div>
 
