--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="img/touch_icon.png">
 
         <!-- Plone CSS - only for preview, will be removed in rules.xml -->
-        <link media="screen" href="css/plone.css" type="text/css" rel="stylesheet">
+        <link media="screen" href="css/plone.css" type="text/css" rel="stylesheet" id="plone-css">
 
         <!-- Theme CSS - only for preview, will be removed in rules and added in CSS registry -->
         <link media="screen" href="css/style.css" type="text/css" rel="stylesheet">
@@ -44,7 +44,7 @@
 					<a accesskey="6" href="#portletNavigationTree">Ir para a navega&ccedil;&atilde;o <span>6</span></a>
 				</li>
 				<li>
-					<a accesskey="5" href="/@@search">Ir para a Busca <span>6</span></a>
+					<a accesskey="5" href="/@@search">Ir para a Busca <span>5</span></a>
 				</li>
 				<li>
 					<a accesskey="9" href="#footer">Ir para o rodap&eacute; <span>9</span></a>
