Estilos para titulos da capa. Htnl e css para o Em destaque

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -120,6 +120,17 @@
 
 		<div id="main" role="main">
 
+		    <div id="em-destaque">
+		    	<ul>
+		    		<li id="em-destaque-titulo">Em destaque</li>
+		    		<li><a href="#">Destaque1</a></li>
+		    		<li><a href="#">Destaque2</a></li>
+		    		<li><a href="#">Destaque3</a></li>
+		    		<li><a href="#">Destaque4</a></li>
+		    		<li><a href="#">Destaque5</a></li>
+		    	</ul>
+		    </div>
+
 			<div id="plone-content">
 
 
