Estilos para listas e portlets

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -227,55 +227,203 @@
 
 			<div id="portal-column-one" class="cell width-1:4 position-0">
 
-				<div id="portletwrapper-706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f506c6f6e650a6e617669676174696f6e" class="portletWrapper kssattr-portlethash-706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f506c6f6e650a6e617669676174696f6e">
-					<dl class="portlet portletNavigationTree"><dt class="portletHeader hiddenStructure">
-					<span class="portletTopLeft"></span>
-					<a href="http://localhost:8080/Plone/sitemap" class="tile">Navigation</a>
-					<span class="portletTopRight"></span>
-					</dt>
 
-					<dd class="portletItem lastItem">
-					<ul class="navTree navTreeLevel0"><li class="navTreeItem visualNoMarker navTreeCurrentNode section-front-page">
+				<div class="portletWrapper" id="portletwrapper-706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f706f7274616c0a617373756e746f73" data-portlethash="706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f706f7274616c0a617373756e746f73">
+				<dl class="portlet portletNavigationTree"><dt class="portletHeader">
+				<span class="portletTopLeft"></span>
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sitemap" class="tile ui-droppable">Assuntos</a>
+				<span class="portletTopRight"></span>
+				</dt>
 
-					<a href="#" class="state-published navTreeCurrentItem navTreeCurrentNode contenttype-document" title="Summary, used in item listings and search results.">
+				<dd class="portletItem lastItem">
+				<ul class="navTree navTreeLevel0"><li class="navTreeItem visualNoMarker navTreeFolderish section-assunto-a">
 
-					<span>Simple Page</span>
-					</a>
 
-					</li>
 
-					<li class="navTreeItem visualNoMarker navTreeFolderish section-news">
 
-					<a href="#" class="state-published navTreeFolderish contenttype-folder" title="Notícias deste site">
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/assuntos/assunto-a" title="" class="state-published navTreeFolderish contenttype-folder">
 
-					<span>News</span>
-					</a>
+				<span>Assunto A</span>
+				</a>
 
-					</li>
 
-					<li class="navTreeItem visualNoMarker navTreeFolderish section-events">
 
-					<a href="#" class="state-published navTreeFolderish contenttype-folder" title="Eventos deste site">
 
-					<span>Events</span>
-					</a>
+				</li>
 
-					</li>
 
-					<li class="navTreeItem visualNoMarker navTreeFolderish section-members">
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-assunto-b">
 
-					<a href="#" class="state-published navTreeFolderish contenttype-folder" title="Pastas pessoais de usuários deste site">
 
-					<span>Users</span>
-					</a>
 
-					</li>
 
-					</ul><span class="portletBottomLeft"></span>
-					<span class="portletBottomRight"></span>
-					</dd>
-					</dl>
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/assuntos/assunto-b" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Assunto B</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-assunto-c">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/assuntos/assunto-c" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Assunto C</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-assunto-d">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/assuntos/assunto-d" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Assunto D</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-assunto-e">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/assuntos/assunto-e" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Assunto E</span>
+				</a>
+
+
+
+
+				</li>
+
+
+
+
+				</ul><span class="portletBottomLeft"></span>
+				<span class="portletBottomRight"></span>
+				</dd>
+				</dl></div>
+
+
+				<div class="portletWrapper" id="portletwrapper-706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f706f7274616c0a736f627265" data-portlethash="706c6f6e652e6c656674636f6c756d6e0a636f6e746578740a2f706f7274616c0a736f627265">
+				<dl class="portlet portletNavigationTree"><dt class="portletHeader">
+				<span class="portletTopLeft"></span>
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sitemap" class="tile ui-droppable">Sobre</a>
+				<span class="portletTopRight"></span>
+				</dt>
+
+				<dd class="portletItem lastItem">
+				<ul class="navTree navTreeLevel0"><li class="navTreeItem visualNoMarker navTreeFolderish section-sobre-a">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sobre/sobre-a" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Sobre A</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-sobre-b">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sobre/sobre-b" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Sobre B</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-sobre-c">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sobre/sobre-c" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Sobre C</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-sobre-d">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sobre/sobre-d" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Sobre D</span>
+				</a>
+
+
+
+
+				</li>
+
+
+				<li class="navTreeItem visualNoMarker navTreeFolderish section-sobre-e">
+
+
+
+
+				<a href="http://tv1-lnx-04.grupotv1.com/portalmodelo/sobre/sobre-e" title="" class="state-published navTreeFolderish contenttype-folder">
+
+				<span>Sobre E</span>
+				</a>
+
+
+
+
+				</li>
+
+
+
+
+				</ul><span class="portletBottomLeft"></span>
+				<span class="portletBottomRight"></span>
+				</dd>
+				</dl></div>
+
+
+				<div class="managePortletsLink">
+				<a title="Exibir a tela de gerenciamento dos portlets" href="http://tv1-lnx-04.grupotv1.com/portalmodelo/capa/@@manage-portlets">Gerenciar portlets</a>
 				</div>
+
 
 			</div>
 
