Ajusta HTML para mudar a ordem das colunas

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -138,92 +138,8 @@
 
 		<div id="portal-columns" class="row">
 
-			<div id="portal-column-content" class="cell width-1:2 position-1:4">
 
-				<div id="viewlet-above-content">
-
-					<div id="portal-breadcrumbs">
-						<span id="breadcrumbs-you-are-here">You
-						are here:</span>
-						<span id="breadcrumbs-home">
-						<a href="#">Home</a>
-						<span class="breadcrumbSeparator">
-						/
-
-						</span>
-						</span>
-						<span id="breadcrumbs-1" dir="ltr">
-
-						<span id="breadcrumbs-current">Simple Page</span>
-
-						</span>
-
-					</div>
-
-				</div>
-
-
-				<div class="">
-
-				<div id="content">
-
-					<div id="viewlet-above-content-title"></div>
-
-					<h1 id="parent-fieldname-title" class="documentFirstHeading">
-					Simple Page
-					</h1>
-
-					<div id="viewlet-below-content-title">
-						<div class="documentByLine" id="plone-document-byline">
-							<span class="documentAuthor">
-							by
-							<a href="http://localhost:8080/Plone/author/admin">admin</a>
-							-
-							</span>
-
-							<span class="documentModified">
-							<span>
-							last modified
-							</span>
-							Apr 04, 2013 11:29 AM
-							</span>
-						</div>
-					</div>
-					<div id="parent-fieldname-description" class="documentDescription">
-					Summary, used in item listings and search results.
-					</div>
-
-					<div id="viewlet-above-content-body"></div>
-
-					<div id="content-core">
-						<div class="" id="parent-fieldname-text-98dbb040075f47bcb64560c3b2b7d7f6">
-						<h2>Content Heading H2</h2>
-						<p>This is a simple paragraph. And <a class="link-plain" href="http://plone.org/">this is a link</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed cursus dui. Nam consequat tincidunt facilisis. Suspendisse libero lacus, vehicula vel consectetur eu, facilisis non leo. Etiam lobortis convallis rutrum. Sed eget nulla ut magna elementum egestas vel quis ante.</p>
-						<h3>Content subheading H3</h3>
-						<p>This is a simple paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed cursus dui. Nam consequat tincidunt facilisis. Suspendisse libero lacus, vehicula vel consectetur eu, facilisis non leo. Etiam lobortis convallis rutrum. Sed eget nulla ut magna elementum egestas vel quis ante.</p>
-						<ul><li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
-						<li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
-						<li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
-						</ul></div>
-					</div>
-
-					<div id="viewlet-below-content-body">
-						<div class="visualClear"><!-- --></div>
-						<div class="documentActions"></div>
-					</div>
-
-
-				</div>
-				</div>
-
-				<div id="viewlet-below-content">
-
-				</div>
-
-			</div>
-
-
-			<!-- Column 1 -->
+<!-- Column 1 -->
 
 			<div id="portal-column-one" class="cell width-1:4 position-0">
 
@@ -427,7 +343,96 @@
 
 			</div>
 
-			<!-- Column 2-->
+
+
+
+<!-- Conteudo -->
+			<div id="portal-column-content" class="cell width-1:2 position-1:4">
+
+				<div id="viewlet-above-content">
+
+					<div id="portal-breadcrumbs">
+						<span id="breadcrumbs-you-are-here">You
+						are here:</span>
+						<span id="breadcrumbs-home">
+						<a href="#">Home</a>
+						<span class="breadcrumbSeparator">
+						/
+
+						</span>
+						</span>
+						<span id="breadcrumbs-1" dir="ltr">
+
+						<span id="breadcrumbs-current">Simple Page</span>
+
+						</span>
+
+					</div>
+
+				</div>
+
+
+				<div class="">
+
+				<div id="content">
+
+					<div id="viewlet-above-content-title"></div>
+
+					<h1 id="parent-fieldname-title" class="documentFirstHeading">
+					Simple Page
+					</h1>
+
+					<div id="viewlet-below-content-title">
+						<div class="documentByLine" id="plone-document-byline">
+							<span class="documentAuthor">
+							by
+							<a href="http://localhost:8080/Plone/author/admin">admin</a>
+							-
+							</span>
+
+							<span class="documentModified">
+							<span>
+							last modified
+							</span>
+							Apr 04, 2013 11:29 AM
+							</span>
+						</div>
+					</div>
+					<div id="parent-fieldname-description" class="documentDescription">
+					Summary, used in item listings and search results.
+					</div>
+
+					<div id="viewlet-above-content-body"></div>
+
+					<div id="content-core">
+						<div class="" id="parent-fieldname-text-98dbb040075f47bcb64560c3b2b7d7f6">
+						<h2>Content Heading H2</h2>
+						<p>This is a simple paragraph. And <a class="link-plain" href="http://plone.org/">this is a link</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed cursus dui. Nam consequat tincidunt facilisis. Suspendisse libero lacus, vehicula vel consectetur eu, facilisis non leo. Etiam lobortis convallis rutrum. Sed eget nulla ut magna elementum egestas vel quis ante.</p>
+						<h3>Content subheading H3</h3>
+						<p>This is a simple paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed cursus dui. Nam consequat tincidunt facilisis. Suspendisse libero lacus, vehicula vel consectetur eu, facilisis non leo. Etiam lobortis convallis rutrum. Sed eget nulla ut magna elementum egestas vel quis ante.</p>
+						<ul><li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
+						<li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
+						<li>List item with link to&nbsp;<a class="link-plain" href="http://plone.org/">Plone site</a>.</li>
+						</ul></div>
+					</div>
+
+					<div id="viewlet-below-content-body">
+						<div class="visualClear"><!-- --></div>
+						<div class="documentActions"></div>
+					</div>
+
+
+				</div>
+				</div>
+
+				<div id="viewlet-below-content">
+
+				</div>
+
+			</div>
+
+
+<!-- Column 2-->
 
 			<div id="portal-column-two" class="cell width-1:4 position-3:4">
 
@@ -468,250 +473,6 @@
 
 		</div>
 
-
-
-<!-- Two columns -->
-		<div id="portal-columns" class="row portaltype-collection">
-
-			<div id="portal-column-content" class="cell width-3:4 position-0">
-
-			<div id="viewlet-above-content"><div id="portal-breadcrumbs">
-
-			<span id="breadcrumbs-you-are-here">You
-			are here:</span>
-			<span id="breadcrumbs-home">
-			<a href="#">Home</a>
-			<span class="breadcrumbSeparator">
-			/
-
-			</span>
-			</span>
-			<span id="breadcrumbs-1" dir="ltr">
-
-
-
-			<span id="breadcrumbs-current">Collection</span>
-
-			</span>
-
-			</div>
-			</div>
-
-
-			<div class="">
-
-
-
-
-
-			<dl class="portalMessage info" id="kssPortalMessage" style="display:none"><dt>Info</dt>
-			<dd></dd>
-			</dl><div id="content">
-
-
-
-
-
-			<div id="viewlet-above-content-title"></div>
-
-
-
-			<h1 id="parent-fieldname-title" class="documentFirstHeading">
-			Collection
-			</h1>
-
-			<div id="viewlet-below-content-title"><div class="documentByLine" id="plone-document-byline">
-
-			<span class="documentAuthor">
-			by
-			<a href="http://localhost:8080/Plone/author/admin">admin</a>
-			-
-			</span>
-
-			<span class="documentModified">
-			<span>
-			last modified
-			</span>
-			Feb 21, 2013 04:50 PM
-			</span>
-
-			</div>
-			</div>
-
-			<div id="parent-fieldname-description" class="documentDescription">
-			Summary
-			</div>
-
-			<div id="viewlet-above-content-body">
-
-			</div>
-			<div id="content-core">
-
-
-			<div class="tileItem visualIEFloatFix">
-			<a href="#">
-			<div class="tileImage">
-			<img src="img/coala.jpeg" alt="This is a news Item post" title="This is a news Item post" height="96" width="128" class="tileImage"></div>
-			</a>
-
-			<h2 class="tileHeadline">
-			<a href="#" class="summary url">This is a news Item post</a>
-			</h2>
-
-			<span class="documentByLine">
-
-			-
-
-			<span>
-			by
-			<a href="http://localhost:8080/Plone/author/admin">admin</a>
-			</span>
-			-
-
-			last modified
-
-			Apr 01, 2013 09:58 AM
-
-			</span>
-
-
-			<p class="tileBody">
-			<span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas consequat, elit sit amet rutrum tempus, diam neque lobortis ipsum, ac iaculis libero lacus sit amet elit.</span>
-			</p>
-
-			<p class="tileFooter">
-			<a href="#">
-			<span class="hiddenStructure">This is a news Item post - </span>
-			<span>Read More...</span>
-			</a>
-			</p>
-
-			<div class="visualClear"><!-- --></div>
-			</div>
-
-
-			<div class="tileItem visualIEFloatFix">
-
-
-			<h2 class="tileHeadline">
-			<a href="#" class="summary url">This is a news Item post without photo/summary</a>
-			</h2>
-
-
-			<span class="documentByLine">
-
-			-
-
-			<span>
-			by
-			<a href="#">admin</a>
-			</span>
-
-			-
-
-			last modified
-
-			Mar 27, 2013 03:25 PM
-
-
-			</span>
-
-
-
-			<p class="tileFooter">
-			<a href="#">
-			<span class="hiddenStructure">This is a news Item post without photo/summary - </span>
-			<span>Read More...</span>
-			</a>
-			</p>
-
-			<div class="visualClear"><!-- --></div>
-			</div>
-
-
-			</div>
-			<div id="viewlet-below-content-body">
-
-
-
-			<div class="visualClear"><!-- --></div>
-
-			<div class="documentActions">
-
-
-
-
-			</div>
-
-			</div>
-
-
-			</div>
-
-
-
-			</div>
-
-
-			<div id="viewlet-below-content">
-
-
-
-
-
-			</div>
-			</div>
-
-
-
-
-			<div id="portal-column-two" class="cell width-1:4 position-3:4">
-
-
-			<div id="portletwrapper-706c6f6e652e7269676874636f6c756d6e0a636f6e746578740a2f506c6f6e650a6e657773" class="portletWrapper kssattr-portlethash-706c6f6e652e7269676874636f6c756d6e0a636f6e746578740a2f506c6f6e650a6e657773">
-			<dl class="portlet portletNews"><dt class="portletHeader">
-			<span class="portletTopLeft"></span>
-			<a href="#" class="tile">News</a>
-			<span class="portletTopRight"></span>
-			</dt>
-
-
-			<dd class="portletItem odd">
-
-			<a href="#" class="tile" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas consequat, elit sit amet rutrum tempus, diam neque lobortis ipsum, ac iaculis libero lacus sit amet elit.">
-
-			This is a news Item post
-			</a>
-			<span class="portletItemDetails">Apr 01, 2013</span>
-
-			</dd>
-
-
-			<dd class="portletItem even">
-
-			<a href="#" class="tile" title="">
-
-			This is a news Item post without photo/summary
-			</a>
-			<span class="portletItemDetails">Mar 27, 2013</span>
-
-			</dd>
-
-
-			<dd class="portletFooter">
-			<span class="portletBottomLeft"></span>
-			<a href="#">
-			More news...
-			</a>
-			<span class="portletBottomRight"></span>
-			</dd>
-
-			</dl></div>
-
-
-			</div>
-
-		</div>
 
 
 
