Estilos de formatacao para o Doormat

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -442,6 +442,13 @@
 <!-- Footer -->
 
 <div id="footer" role="contentinfo">
+
+	<div id="doormat">
+	    Menu do rodape
+    </div>
+
+    <div class="clear"></div>
+
 	<div>
 		<a href="#" class="logo-brasil">
 			<img src="img/brasil.png" alt="Brasil - Governo Federal" />
