Ajustes no rodape, navegacao e header

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -35,25 +35,25 @@
 
 				<ul id="accessibility">
 					<li>
-						<a accesskey="2" href="#content">
+						<a accesskey="2" href="#content" id="link-conteudo">
 							Ir para o conte&uacute;do
 							<span>2</span>
 						</a>
 					</li>
 					<li>
-						<a accesskey="5" href="/@@search">
+						<a accesskey="5" href="#" id="link-busca">
 							Ir para a Busca
 							<span>5</span>
 						</a>
 					</li>
 					<li>
-						<a accesskey="6" href="#portletNavigationTree">
+						<a accesskey="6" href="#portletNavigationTree" id="link-navegacao">
 							Ir para a navega&ccedil;&atilde;o
 							<span>6</span>
 						</a>
 					</li>
 					<li>
-						<a accesskey="9" href="#footer">
+						<a accesskey="9" href="#footer" id="link-rodape">
 							Ir para o rodap&eacute;
 							<span>9</span>
 						</a>
@@ -425,18 +425,19 @@
     </div>
     <div class="clear"></div>
 	<div>
-		<a href="#" class="logo-brasil">
-			<img src="img/brasil.png" alt="Brasil - Governo Federal" />
-		</a>
 		<a href="#" class="logo-acesso">
 			<img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
 		</a>
-		<p>
-			Desenvolvido com o CMS de c&oacute;digo aberto
-			<a href="http://plone.org">Plone</a>
-			.
-		</p>
+		<a href="#" class="logo-brasil">
+			<img src="img/brasil.png" alt="Brasil - Governo Federal" />
+		</a>
 	</div>
+</div>
+<div id="extra-footer">
+	<p>
+	Desenvolvido com o CMS de c&oacute;digo aberto
+	<a href="http://plone.org">Plone</a>
+	</p>
 </div>
 
 <!-- /Footer-->
