Altera visao de imagem, adiciona link para o topo

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -414,6 +414,9 @@
 	</div>
 
 	<div class="clear"></div>
+	<div id="voltar-topo">
+		<a href="/#wrapper">Voltar para o topo</a>
+	</div>
 
 </div>
 
