link voltar para o topo

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -415,7 +415,7 @@
 
 	<div class="clear"></div>
 	<div id="voltar-topo">
-		<a href="/#wrapper">Voltar para o topo</a>
+		<a href="#wrapper">Voltar para o topo</a>
 	</div>
 
 </div>
