Altera a numeracao das teclas de acesso

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -35,27 +35,27 @@
 
 				<ul id="accessibility">
 					<li>
-						<a accesskey="2" href="#content" id="link-conteudo">
+						<a accesskey="1" href="#content" id="link-conteudo">
 							Ir para o conte&uacute;do
+							<span>1</span>
+						</a>
+					</li>
+					<li>
+						<a accesskey="2" href="#portletNavigationTree" id="link-navegacao">
+							Ir para a navega&ccedil;&atilde;o
 							<span>2</span>
 						</a>
-					</li>
+					</li>					
 					<li>
-						<a accesskey="5" href="#" id="link-busca">
+						<a accesskey="3" href="#" id="link-busca">
 							Ir para a Busca
-							<span>5</span>
+							<span>3</span>
 						</a>
 					</li>
 					<li>
-						<a accesskey="6" href="#portletNavigationTree" id="link-navegacao">
-							Ir para a navega&ccedil;&atilde;o
-							<span>6</span>
-						</a>
-					</li>
-					<li>
-						<a accesskey="9" href="#footer" id="link-rodape">
+						<a accesskey="4" href="#footer" id="link-rodape">
 							Ir para o rodap&eacute;
-							<span>9</span>
+							<span>4</span>
 						</a>
 					</li>
 				</ul>
@@ -74,7 +74,7 @@
 					<a href="#">Acessibilidade</a>
 				</li>
 				<li>
-					<a href="#">Contraste</a>
+					<a href="#">Alto Contraste</a>
 				</li>
 				<li>
 					<a href="#">Mapa do Site</a>
