Ajuestes dos links de acessibilidade

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -47,7 +47,7 @@
 						</a>
 					</li>					
 					<li>
-						<a accesskey="3" href="#" id="link-busca">
+						<a accesskey="3" href="#searchGadget" id="link-busca">
 							Ir para a Busca
 							<span>3</span>
 						</a>
@@ -92,7 +92,7 @@
 			<div id="portal-searchbox" role="search">
 				<form>
 
-					<input type="text" id="searchGadget" class="searchField" accesskey="4" placeholder="Buscar no Site" title="Buscar no Site" size="18" name="SearchableText" autocomplete="off">
+					<input type="text" id="searchGadget" class="searchField" accesskey="3" placeholder="Buscar no Site" title="Buscar no Site" size="18" name="SearchableText" autocomplete="off">
 					<input type="submit" value="Buscar" class="searchButton"></form>
 			</div>
 
@@ -421,7 +421,7 @@
 </div>
 
 <!-- Footer -->
-<div id="footer" role="contentinfo">
+<div id="footer" role="contentinfo" accesskey="4">
 
 	<div id="doormat">
 	    Menu do rodape
