Ajuste nos teclas de atalho

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -41,13 +41,13 @@
 						</a>
 					</li>
 					<li>
-						<a accesskey="2" href="#portletNavigationTree" id="link-navegacao">
+						<a accesskey="2" href="#navigation" id="link-navegacao">
 							Ir para a navega&ccedil;&atilde;o
 							<span>2</span>
 						</a>
 					</li>					
 					<li>
-						<a accesskey="3" href="#searchGadget" id="link-busca">
+						<a accesskey="3" href="#nolivesearchGadget" id="link-busca">
 							Ir para a Busca
 							<span>3</span>
 						</a>
