Ajusta o atalho para a busca

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -47,7 +47,7 @@
 						</a>
 					</li>					
 					<li>
-						<a accesskey="3" href="#nolivesearchGadget" id="link-busca">
+						<a accesskey="3" href="#portal-searchbox" id="link-buscar">
 							Ir para a Busca
 							<span>3</span>
 						</a>
