--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -428,10 +428,10 @@
     </div>
     <div class="clear"></div>
 	<div>
-		<a href="#" class="logo-acesso">
+		<a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
 			<img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
 		</a>
-		<a href="#" class="logo-brasil">
+		<a href="http://www.brasil.gov.br/" class="logo-brasil">
 			<img src="img/brasil.png" alt="Brasil - Governo Federal" />
 		</a>
 	</div>
