Remove Accesskeys desnecessários

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -421,7 +421,7 @@
 </div>
 
 <!-- Footer -->
-<div id="footer" role="contentinfo" accesskey="4">
+<div id="footer" role="contentinfo">
 
 	<div id="doormat">
 	    Menu do rodape
