alteração no posicionamento do breadcrumb na estrutura html

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -141,6 +141,29 @@
 
 		<div id="portal-columns" class="row">
 
+			<div id="viewlet-above-content">
+
+				<div id="portal-breadcrumbs">
+					<span id="breadcrumbs-you-are-here">
+						You
+					are here:
+					</span>
+					<span id="breadcrumbs-home">
+						<a href="#">Home</a>
+						<span class="breadcrumbSeparator">/</span>
+					</span>
+					<span id="breadcrumbs-1" dir="ltr">
+
+						<span id="breadcrumbs-current">Simple Page</span>
+
+					</span>
+
+				</div>
+
+			</div>
+
+
+
 			<!-- Column 1 -->
 
 			<div id="navigation">
@@ -280,28 +303,7 @@
 			<!-- Conteudo -->
 			<div id="portal-column-content" class="cell width-1:2 position-1:4">
 
-				<div id="viewlet-above-content">
-
-					<div id="portal-breadcrumbs">
-						<span id="breadcrumbs-you-are-here">
-							You
-						are here:
-						</span>
-						<span id="breadcrumbs-home">
-							<a href="#">Home</a>
-							<span class="breadcrumbSeparator">/</span>
-						</span>
-						<span id="breadcrumbs-1" dir="ltr">
-
-							<span id="breadcrumbs-current">Simple Page</span>
-
-						</span>
-
-					</div>
-
-				</div>
-
-				<div class="">
+				<div class="documentEditable">
 
 					<div id="content">
 
