correção na regra do diazo

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -303,7 +303,7 @@
 			<!-- Conteudo -->
 			<div id="portal-column-content" class="cell width-1:2 position-1:4">
 
-				<div class="documentEditable">
+				<div class="">
 
 					<div id="content">
 
