Ajuste no atalho para menu para ficar como orienta o e-MAG

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -40,7 +40,7 @@
 					</li>
 					<li>
 						<a accesskey="2" href="#navigation" id="link-navegacao">
-							Ir para a navega&ccedil;&atilde;o
+							Ir para o menu
 							<span>2</span>
 						</a>
 					</li>
