Alteração textual na barra de acessibilidade e form de busca

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -38,7 +38,7 @@
 					</li>
 					<li>
 						<a accesskey="3" href="#portal-searchbox" id="link-buscar">
-							Ir para a Busca
+							Ir para a busca
 							<span>3</span>
 						</a>
 					</li>
@@ -90,7 +90,7 @@
 			<div id="portal-searchbox" role="search">
 				<form>
 
-					<input type="text" id="searchGadget" class="searchField" accesskey="3" placeholder="Buscar no Site" title="Buscar no Site" size="18" name="SearchableText" autocomplete="off">
+					<input type="text" id="searchGadget" class="searchField" accesskey="3" placeholder="Buscar no portal" title="Buscar no portal" size="18" name="SearchableText" autocomplete="off">
 					<input type="submit" value="Buscar" class="searchButton"></form>
 			</div>
 
