--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -427,20 +427,16 @@
 	    Menu do rodape
     </div>
     <div class="clear"></div>
-	<div>
-        <ul>
-            <li>
-		        <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
-			        <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
-		        </a>
-            </li>
-            <li>
-		        <a href="http://www.brasil.gov.br/" class="logo-brasil">
-			        <img src="img/brasil.png" alt="Brasil - Governo Federal" />
-		        </a>
-            </li>
-        </ul>
-	</div>
+    <div class="footer-logos">
+        <div>
+            <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
+                <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
+            </a>
+            <a href="http://www.brasil.gov.br/" class="logo-brasil">
+                <img src="img/brasil.png" alt="Brasil - Governo Federal" />
+            </a>
+        </div>
+    </div>
 </div>
 <div id="extra-footer">
 	<p>
