Separação de arquivos de css e link do novo arquivo no index.hmtl

--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -11,6 +11,7 @@
 	<link media="screen" href="css/plone.css" type="text/css" rel="stylesheet" id="plone-css">
 
 	<!-- Theme CSS - only for preview, will be removed in rules and added in CSS registry -->
+	<link media="all" href="css/main.css" type="text/css" rel="stylesheet"></head>
 	<link media="all" href="css/style.css" type="text/css" rel="stylesheet"></head>
 
 <body >
