--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -35,25 +35,25 @@
 
                 <ul id="accessibility">
                     <li>
-                        <a accesskey="1" href="#content" id="link-conteudo">
+                        <a accesskey="1" href="#acontent" id="link-conteudo">
                             Ir para o conte&uacute;do
                             <span>1</span>
                         </a>
                     </li>
                     <li>
-                        <a accesskey="2" href="#navigation" id="link-navegacao">
+                        <a accesskey="2" href="#anavigation" id="link-navegacao">
                             Ir para o menu
                             <span>2</span>
                         </a>
                     </li>
                     <li>
-                        <a accesskey="3" href="#portal-searchbox" id="link-buscar">
+                        <a accesskey="3" href="#SearchableText" id="link-buscar">
                             Ir para a busca
                             <span>3</span>
                         </a>
                     </li>
                     <li>
-                        <a accesskey="4" href="#footer" id="link-rodape">
+                        <a accesskey="4" href="#afooter" id="link-rodape">
                             Ir para o rodap&eacute;
                             <span>4</span>
                         </a>
@@ -164,11 +164,9 @@
 
             </div>
 
-
-
             <!-- Column 1 -->
-
             <div id="navigation">
+                <a name="anavigation" id="anavigation"></a>
                 <span class="menuTrigger">Menu</span>
                 <div id="portal-column-one" class="cell width-1:4 position-0">
 
@@ -304,6 +302,7 @@
 
             <!-- Conteudo -->
             <div id="portal-column-content" class="cell width-1:2 position-1:4">
+                <a name="acontent" id="acontent"></a>
 
                 <div class="">
 
@@ -424,6 +423,7 @@
 
 <!-- Footer -->
 <div id="footer" role="contentinfo">
+    <a name="afooter" id="afooter"></a>
 
     <div id="doormat">
         Menu do rodape
