--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -61,11 +61,11 @@
                 </ul>
                 <!--
             <ul id="language">
-                <li class="language-en">
-                    <a href="#">EN</a>
-                </li>
                 <li class="language-es">
-                    <a href="#">ES</a>
+                    <a href="#">Espa&#241;ol</a>
+                </li>
+                <li class="language-en">
+                    <a href="#">English</a>
                 </li>
             </ul>
             -->
