--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -429,7 +429,7 @@
         Menu do rodape
     </div>
     <div class="clear"></div>
-    <div class="footer-logos">
+    <div id="footer-brasil" class="footer-logos">
         <div>
             <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
                 <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
