Ajuste dos temas para melhoria na acessibilidade WCAG 2.0

--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -17,6 +17,34 @@
 
 <body>
 
+    <div id="accessibility-wrapper">
+        <ul id="accessibility">
+           <li>
+                <a accesskey="1" href="#acontent" id="link-conteudo">Ir para o conte&uacute;do<span>1</span></a>
+            </li>
+            <li>
+                <a accesskey="2" href="#anavigation" id="link-navegacao">Ir para o menu<span>2</span></a>
+            </li>
+            <li>
+                <a accesskey="3" href="#SearchableText" id="link-buscar">Ir para a busca<span>3</span></a>
+            </li>
+            <li>
+                <a accesskey="4" href="#afooter" id="link-rodape">Ir para o rodap&eacute;<span>4</span></a>
+            </li>
+        </ul>
+        <ul id="portal-siteactions">
+            <li>
+                <a href="#">Acessibilidade</a>
+            </li>
+            <li>
+               <a href="#">Alto Contraste</a>
+           </li>
+           <li>
+               <a href="#">Mapa do Site</a>
+           </li>
+        </ul>
+    </div>
+
     <div id="user">
         <ul>
             <li>
@@ -32,54 +60,6 @@
         <div id="header" role="banner">
 
             <div>
-
-                <ul id="accessibility">
-                    <li>
-                        <a accesskey="1" href="#acontent" id="link-conteudo">
-                            Ir para o conte&uacute;do
-                            <span>1</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a accesskey="2" href="#anavigation" id="link-navegacao">
-                            Ir para o menu
-                            <span>2</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a accesskey="3" href="#SearchableText" id="link-buscar">
-                            Ir para a busca
-                            <span>3</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a accesskey="4" href="#afooter" id="link-rodape">
-                            Ir para o rodap&eacute;
-                            <span>4</span>
-                        </a>
-                    </li>
-                </ul>
-                <!--
-            <ul id="language">
-                <li class="language-es">
-                    <a href="#">Espa&#241;ol</a>
-                </li>
-                <li class="language-en">
-                    <a href="#">English</a>
-                </li>
-            </ul>
-            -->
-            <ul id="portal-siteactions">
-                <li>
-                    <a href="#">Acessibilidade</a>
-                </li>
-                <li>
-                    <a href="#">Alto Contraste</a>
-                </li>
-                <li>
-                    <a href="#">Mapa do Site</a>
-                </li>
-            </ul>
 
             <div id="logo">
                 <a href="#" title="#">
