Links de línguas podem ser adicionados via actions
Adicionada estrutura nas regras de Diazo permitindo inserção de links de
línguas como actions em "site_actions": basta criar com o mesmo id hoje
presente nas regras css (language-en e language-es). Dessa forma, evita-se
customização do tema apenas para inserção desses links.

Essa modificação é mais eficiente que a apresentada no commit https://github.com/plonegovbr/brasil.gov.temas/commit/843e87f4b433dacd528dd23176bbbbb1b32a84c9
pois não necessita de modificações adicionais nem de criação de viewlets
auxiliares, basta utilizar a infra-estrutura hoje existente de actions.

--- a/src/brasil/gov/temas/themes/amarelo/index.html
+++ b/src/brasil/gov/temas/themes/amarelo/index.html
@@ -59,8 +59,8 @@
                         </a>
                     </li>
                 </ul>
-                <!--
-            <ul id="language">
+                
+            <ul id="language" class="hidden">
                 <li class="language-es">
                     <a href="#">Espa&#241;ol</a>
                 </li>
@@ -68,7 +68,7 @@
                     <a href="#">English</a>
                 </li>
             </ul>
-            -->
+            
             <ul id="portal-siteactions">
                 <li>
                     <a href="#">Acessibilidade</a>
