--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -59,8 +59,8 @@
                         </a>
                     </li>
                 </ul>
-                <!--
-            <ul id="language">
+                
+            <ul id="language" class="hidden">
                 <li class="language-es">
                     <a href="#">Espa&#241;ol</a>
                 </li>
@@ -68,7 +68,7 @@
                     <a href="#">English</a>
                 </li>
             </ul>
-            -->
+            
             <ul id="portal-siteactions">
                 <li>
                     <a href="#">Acessibilidade</a>
