--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -16,24 +16,8 @@
 </head>
 
 <body>
-
-    <div id="user">
-        <ul>
-            <li>
-                <a href="#" title="Login">Login</a>
-            </li>
-        </ul>
-    </div>
-
-    <div id="wrapper">
-
-        <!-- HEADER -->
-
-        <div id="header" role="banner">
-
-            <div>
-
-                <ul id="accessibility">
+<div id="accessibility-wrapper">
+            <ul id="accessibility">
                     <li>
                         <a accesskey="1" href="#acontent" id="link-conteudo">
                             Ir para o conte&uacute;do
@@ -80,6 +64,25 @@
                     <a href="#">Mapa do Site</a>
                 </li>
             </ul>
+</div>
+
+    <div id="user">
+        <ul>
+            <li>
+                <a href="#" title="Login">Login</a>
+            </li>
+        </ul>
+    </div>
+
+    <div id="wrapper">
+
+        <!-- HEADER -->
+
+        <div id="header" role="banner">
+
+            <div>
+
+                
 
             <div id="logo">
                 <a href="#" title="#">
@@ -433,9 +436,6 @@
         <div>
             <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
                 <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
-            </a>
-            <a href="http://www.brasil.gov.br/" class="logo-brasil">
-                <img src="img/brasil.png" alt="Brasil - Governo Federal" />
             </a>
         </div>
     </div>
