--- a/src/brasil/gov/temas/themes/verde/index.html
+++ b/src/brasil/gov/temas/themes/verde/index.html
@@ -16,24 +16,8 @@
 </head>
 
 <body>
-
-    <div id="user">
-        <ul>
-            <li>
-                <a href="#" title="Login">Login</a>
-            </li>
-        </ul>
-    </div>
-
-    <div id="wrapper">
-
-        <!-- HEADER -->
-
-        <div id="header" role="banner">
-
-            <div>
-
-                <ul id="accessibility">
+<div id="accessibility-wrapper">
+            <ul id="accessibility">
                     <li>
                         <a accesskey="1" href="#acontent" id="link-conteudo">
                             Ir para o conte&uacute;do
@@ -80,7 +64,22 @@
                     <a href="#">Mapa do Site</a>
                 </li>
             </ul>
+</div>
+    <div id="user">
+        <ul>
+            <li>
+                <a href="#" title="Login">Login</a>
+            </li>
+        </ul>
+    </div>
 
+    <div id="wrapper">
+
+        <!-- HEADER -->
+
+        <div id="header" role="banner">
+
+            <div>
             <div id="logo">
                 <a href="#" title="#">
                     <span id="portal-title">Portal Title</span>
