--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -437,6 +437,9 @@
             <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
                 <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
             </a>
+            <a href="http://www.brasil.gov.br/" class="logo-brasil">
+                <img src="img/brasil.png" alt="Brasil - Governo Federal" />
+            </a>
         </div>
     </div>
 </div>
