Modificando o nome da brasil.png. #121

--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -438,7 +438,7 @@
                 <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
             </a>
             <a href="http://www.brasil.gov.br/" class="logo-brasil">
-                <img src="img/brasil.png" alt="Brasil - Governo Federal" />
+                <img src="img/brasil_patria.png" alt="Brasil - Governo Federal" />
             </a>
         </div>
     </div>
