Remove imagens de fallback do rodapé.
Atende https://github.com/plonegovbr/brasil.gov.temas/issues/130.

Com o uso da barra local através de brasil.gov.barra >= 1.1.2, o
conceito de usar um rodapé mesmo que o carregamento da barra falhe
(principalmente por questões de certificado) passa a ser atendido pela
barra local e não mais por uma imagem estática no tema.

--- a/src/brasil/gov/temas/themes/azul/index.html
+++ b/src/brasil/gov/temas/themes/azul/index.html
@@ -432,16 +432,7 @@
         Menu do rodape
     </div>
     <div class="clear"></div>
-    <div id="footer-brasil" class="footer-logos">
-        <div>
-            <a href="http://www.acessoainformacao.gov.br/" class="logo-acesso">
-                <img src="img/acesso-a-infornacao.png" alt="Acesso a Informa&ccedil;&atilde;o" />
-            </a>
-            <a href="http://www.brasil.gov.br/" class="logo-brasil">
-                <img src="img/brasil_patria.png" alt="Brasil - Governo Federal" />
-            </a>
-        </div>
-    </div>
+    <div id="footer-brasil" class="footer-logos"></div>
 </div>
 <div id="extra-footer">
     <p>
